chi square test of independance added

--- a/code.ipynb
+++ b/code.ipynb
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a406134f",
    "metadata": {},
    "outputs": [
@@ -1943,9 +1943,42 @@
     "expectedDf = pd.DataFrame(expected,index=['Baseline','Civilized','Uncivilized','Hero','Terrorist','Wealthy','Poor','Criminal','Innocent'],columns=['Caucasian','Asian','Hispanic','Middle Eastern','Black'])\n",
     "display(expectedDf)\n",
     "\n",
-    "print('Chi square statistic ',chi2)\n",
     "\n",
     "# print(expectedDf.to_latex(float_format=\"%.2f\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4dd60a0",
+   "metadata": {},
+   "source": [
+    "### Chi Square Test of Independance Critical Value and Test Statistic Calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "a0139037",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi square statistic  919.5517215808882\n",
+      "critical value is  46.19425952027847\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 0.05\n",
+    "\n",
+    "# calculate the critical value for our null hypothesis, that the distributions are all the same\n",
+    "crit_val = stats.chi2.ppf(1 - alpha, dof)\n",
+    "\n",
+    "print('Chi square statistic ',chi2)\n",
+    "\n",
+    "print('critical value is ',crit_val)"
    ]
   },
   {
